# BeaCon

./: .editorconfig  .gitignore  LICENSE  pyproject.toml
data/samples/: profile_exmaple.json
src/beacon/: analysis.csv  baseline.py  data_comparison.py  event_nametable.py  run.py
src/beacon/container_init/: couchbase.sh  haproxy.cfg
src/beacon/core/: BPF.py  container.py  wrapper.py
src/beacon/emulating/: agent.py  stable_args.json  types.py  wl_command.json
src/beacon/monitoring/: agent.py
src/beacon/monitoring/ebpf/: inst.c  types.py
src/beacon/tool/inspector/: analysis.json  categories.json  container_pull.py  get_official_list.py  img_info.json  img_info.json.back  inspect.py  not_supported_imgs.json
